apply plugin: 'com.android.library'

android {
    compileSdkVersion 28
    buildToolsVersion '28.0.3'
    defaultConfig {
        minSdkVersion 15
        targetSdkVersion 28
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
        }
    }
    productFlavors {
    }
    compileOptions {
        sourceCompatibility 1.8
        targetCompatibility 1.8
    }
}

/*
NOTE: If you change dependencies here, don't forget to update the jar files in JavaFileStorageBindings as well!
 */

dependencies {

    compile 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
    compile 'com.burgstaller:okhttp-digest:2.5'

    compile 'com.google.http-client:google-http-client-gson:1.20.0'
    compile('com.google.api-client:google-api-client-android:1.30.5') {
        exclude group: 'com.google.android.google-play-services'
    }
    compile 'com.google.apis:google-api-services-drive:v2-rev102-1.16.0-rc'
    compile 'com.dropbox.core:dropbox-core-sdk:4.0.0'
    implementation 'com.google.api-client:google-api-client:1.30.5'
    implementation 'com.google.api-client:google-api-client-android:1.30.5'

    implementation 'com.google.android.gms:play-services-auth:19.2.0'
    //onedrive:
    compile('com.onedrive.sdk:onedrive-sdk-android:1.2.0') {
        transitive = false
    }
    compile 'com.pcloud.sdk:java-core:1.2.0'
    compile 'com.pcloud.sdk:android:1.2.0'
    compile 'com.google.code.gson:gson:2.8.6'
    compile 'com.microsoft.services.msa:msa-auth:0.8.6'
    compile 'com.microsoft.aad:adal:1.14.0'

}
